--- a/index.html
+++ b/index.html
@@ -3,100 +3,59 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Erno's personal site</title>
+  <title>Erno Lehtonen</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Lekton|Merriweather|Montserrat|Sacramento" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing=20>
-    <tr>
-      <td><img src="images/profile_picture.jpg" alt="Erno profile picture"></td>
-      <td>
-        <h1>Erno Lehtonen</h1>
-        <p><em>Wanna be freelance developer aka <strong><a href="https://www.indiesorcerer.com/">Indiesorcerer</a></strong></em></p>
-        <p>Bio goes here I suppose</p>
-      </td>
-    </tr>
-  </table>
 
+<div class="background-container">
+<img class="mountain_bg" src="images/mountain_bg.jpg" alt="mountain_bg">
+</div>
+<div class="content-over-bg">
+  <div class="top-container">
+    <h1>Indie</h1>
+    <h1 class="sorcerer">sorcerer</h1>
+    <p>A jack of all trades. Programmer, artist, sorcerer.</p>
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img class="profile-picture"src="images/profile_picture.jpg" alt="profile-picture">
+      <h2>Hello.</h2>
+      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="skill-image" src="images/commonCat.png" alt="cat-picture">
+        <h3>Lorem & Ipsum</h3>
+        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      </div>
+      <div class="skill-row">
+        <img class="skill-image_2" src="images/commonCat.png" alt="cat-picture">
+        <h3>Lorem Ipsum Dolor</h3>
+        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+    </div>
+  </div>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.indiesorcerer.com/">Website</a>
+    <p class="copyright">© 2019 Erno Lehtonen.</p>
+  </div>
 
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>Elementary school</li>
-    <li>High school</li>
-    <li>University of Applied Sciences</li>
-    <li>Web Development Bootcamp</li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-  <table>
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2013-2016</td>
-        <td>JAMK University of Applied Sciences</td>
-      </tr>
-      <tr>
-        <td>2018</td>
-        <td>Software developer at Samlink</td>
-      </tr>
-    </tbody>
-    <tfoot>
-
-    </tfoot>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-
-  <table cellspacing = "10">
-    <tr>
-      <td>
-        <table cellspacing = "10">
-          <tr>
-            <td>Unity Engine</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Digital Art</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Web Development</td>
-            <td>⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table>
-          <tr>
-            <td>Unity Engine</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Digital Art</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Web Development</td>
-            <td>⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-
-
-  <hr>
-  <a href="hobbies.html">My hobbies</a>
-  <br>
-  <a href="contact.html">Contact Information</a>
-  <br>
-  <a download href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf">Download Cheatsheet</a>
+</div>
 
 </body>
 
